# Web-application-with-Rust

./: .gitignore  Cargo.toml  README.md
houseplants-client/: Cargo.toml
houseplants-client/src/client_modules/: db_access.rs  errors.rs  helpers.rs  mod.rs  model.rs  routes.rs  state.rs
houseplants-client/src/client_modules/db_scripts/: user.sql
houseplants-client/src/client_modules/handlers/: authorization.rs  general.rs  home.rs  interesting_fact.rs  member.rs  mod.rs  plant.rs  user_authorization.rs
houseplants-client/static/register_form/: register.html
houseplants-client/static/signin/: signin_form.html
houseplants-client/templates/: register_and_signin_forms.css
houseplants-client/templates/base/: base.html
houseplants-client/templates/base/macros/: footer.html  (+2 more)
houseplants-client/templates/facts/: facts.html
houseplants-client/templates/general/: general.html
houseplants-client/templates/home/: home.html  home_base.html  navigate_block.html
houseplants-client/templates/members/: members.html
houseplants-client/templates/new_plant_form/: new_plant.html  new_plant_form.html  new_plant_original.html
houseplants-client/templates/plant_for_member/: plant.html  plant_for_member.html
houseplants-client/templates/plants/: plants.html
houseplants-client/templates/plants_for_member/: plants_for_member.html
houseplants-client/templates/register_form/: register.html
houseplants-client/templates/signin/: signin_form.html
houseplants-client/templates/signin_form/: signin.html  signin_form.html
houseplants-client/templates/user/: user.html
(+24 files in other folders)
