[package]
name = "houseplants-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix web core library
actix-web = "4.2.1"
# Actix crate for serving static pages
actix-files="0.6.2"
# Templating library
tera = "1.17.0"
# Serialization and deserialization
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.0"
# Environment access
dotenv = "0.15.0"
# HTTP Client
awc = "3.0.1"
# Database access
sqlx = {version = "0.6.2", default_features = false, features = ["postgres","runtime-tokio-native-tls", "macros", "chrono"]}
# Password hash
rust-argon2 = "2.0.0"
